Top position relative to nav, z-index issues.

--- a/style.sass
+++ b/style.sass
@@ -34,10 +34,13 @@ header
     position: fixed
     top: 0
     grid-template-columns: 15vw 3fr 7.5vw 7.5vw
-    width: 100vw 
+    width: 100vw
+    height: 75px
     background-color: transparent
     padding-top: 2%
     margin-bottom: -10px
+    z-index: 99
+    background-color: $bgcolor
 
 
 header > h2 
@@ -122,18 +125,6 @@ header > button span
     display: none
 
 
-
-.wrapper
-    background-image: url("img/dogheader.jpg")
-    background-color: $bgcolor
-     
-    min-width: 100%
-    min-height: 100vh
-    background-size: contain
-    background-position: center
-    overflow: hidden
-    background-repeat: no-repeat
-
 .content-1
     display: grid
     grid-template-rows: repeat(18, 1fr)
@@ -144,6 +135,18 @@ header > button span
     min-width: 0
 
 // Header area w/ hero image
+
+headercontent 
+    background-image: url("img/dogheader.jpg")
+    background-color: $bgcolor
+    min-width: 100%
+    min-height: 100vh
+    background-size: contain
+    background-position: center
+    overflow: hidden
+    background-repeat: no-repeat
+    position: relative
+    top: 75px
 
 headercontent > h1
     grid-column: 4/9
@@ -202,6 +205,7 @@ adoptsection > animalcontainer > img
     transition-duration: 300ms
     transition-delay: 50ms
     overflow: hidden
+    border-radius: 10%
     
 adoptsection > animalcontainer > img:hover
     transform: scale(.95)
